--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@emailjs/browser": "^3.10.0",
     "animate.css": "^4.1.1",
     "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint-config-next": "^13.5.4",
     "gasp": "^0.0.2",
     "loaders.css": "^0.1.2",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "sass": "^1.59.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
