--- a/package.json
+++ b/package.json
@@ -19,13 +19,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-leaflet": "^4.2.1",
-    "sass": "^1.59.3"
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
-    "webgi": "https://storage.googleapis.com/dist.pixotronics.com/webgi/runtime/bundle-0.8.5.tgz"
+    "tailwindcss": "^3.3.3"
   }
 }
