--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@react-three/drei": "^9.88.4",
+    "@react-three/fiber": "^8.15.3",
     "animate.css": "^4.1.1",
     "eslint": "8.36.0",
     "eslint-config-next": "^13.5.4",
@@ -19,7 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "three": "^0.157.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
