--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "animate.css": "^4.1.1",
     "eslint": "8.36.0",
     "eslint-config-next": "^13.5.4",
-    "gasp": "^0.0.2",
+    "gsap": "^3.12.2",
     "loaders.css": "^0.1.2",
     "next": "^13.5.6",
     "react": "^18.2.0",
